--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user: nikom1337
+twitter_user: kornelrabczak
 twitter_tweet_button: true
 
 # Google +1
