--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ default_asides: [asides/nav.html, asides/recent_posts.html, asides/github.html, 
 # ----------------------- #
 
 # Github repositories
-github_user: nikom1337
+github_user: kornelrabczak
 github_repo_count: 5
 github_show_profile_link: true
 github_skip_forks: true
