fixes github action

--- a/hugo.toml
+++ b/hugo.toml
@@ -114,3 +114,7 @@ theme = 'loveit'
   page = ["HTML", "MarkDown"]
   section = ["HTML", "RSS"]
   taxonomy = ["HTML", "RSS"]
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
