--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,5 @@
 baseURL = 'https://kornelrabczak.github.io/thecookiezen-blog/'
+canonifyURLs = true
 languageCode = 'en-us'
 title = 'thecookiezen'
 theme = 'loveit'
